# nand-to-tetris

./: .gitmodules  two-complement.tex
proj-01-solutions/: DMux.hdl  DMux4Way.hdl  DMux8Way.hdl  Mux.hdl  Mux4Way16.hdl  Mux8Way16.hdl  Or16.hdl  Or8Way.hdl  Xor.hdl
proj-02-solutions/: ALU.hdl  FullAdder.hdl  Inc16.hdl
proj-03/: Bit.hdl  PC.hdl  RAM16K.hdl  RAM4K.hdl  RAM512.hdl  RAM64.hdl  RAM8.hdl
proj-04-fill/: Fill.asm
proj-04-mult/: Mult.asm
proj-05/: CPU.hdl  Computer.hdl  Memory.hdl  cpu.hdl
proj-07/: pyproject.toml
proj-07/src/translator/: translator.py
